tests/errors/semantic/blocking/SET_UNION_TYPES.py


def f():
    a = {1,2,4}
    b = {1.3,4.6, 9.2}
    c = a.union(b)
